// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map CT customer to Klaviyo profile should include/exclude/map custom fields and send them with the klaviyo profile 1`] = `
{
  "data": {
    "attributes": {
      "email": "Alfred_Lebsack@hotmail.com",
      "externalId": "77d8e6f4-2dee-4ac9-bd21-4035b6ba76d8",
      "firstName": "Jailyn",
      "lastName": "Hilll",
      "location": {
        "address1": "12, First Street",
        "address2": "",
        "city": "Brookefort",
        "country": "NL",
        "region": undefined,
        "zip": "12345",
      },
      "organization": undefined,
      "phoneNumber": "+39 3234567892",
      "properties": {
        "includedFieldAfterMap": true,
      },
      "title": "Miss",
    },
    "id": undefined,
    "type": "profile",
  },
}
`;

exports[`map CT customer to Klaviyo profile should map a commercetools customer to a klaviyo profile 1`] = `
{
  "data": {
    "attributes": {
      "email": "Alfred_Lebsack@hotmail.com",
      "externalId": "77d8e6f4-2dee-4ac9-bd21-4035b6ba76d8",
      "firstName": "Jailyn",
      "lastName": "Hilll",
      "location": {
        "address1": "12, First Street",
        "address2": "",
        "city": "Brookefort",
        "country": "NL",
        "region": undefined,
        "zip": "12345",
      },
      "organization": undefined,
      "phoneNumber": "+39 3234567892",
      "properties": undefined,
      "title": "Miss",
    },
    "id": undefined,
    "type": "profile",
  },
}
`;

exports[`map CT customer to Klaviyo profile should map a commercetools customer to a klaviyo profile with an existing profile id 1`] = `
{
  "data": {
    "attributes": {
      "email": "Alfred_Lebsack@hotmail.com",
      "externalId": "77d8e6f4-2dee-4ac9-bd21-4035b6ba76d8",
      "firstName": "Jailyn",
      "lastName": "Hilll",
      "location": {
        "address1": "12, First Street",
        "address2": "",
        "city": "Brookefort",
        "country": "NL",
        "region": undefined,
        "zip": "12345",
      },
      "organization": undefined,
      "phoneNumber": "+39 3234567892",
      "properties": undefined,
      "title": "Miss",
    },
    "id": "123456",
    "type": "profile",
  },
}
`;
